--- a/CodeChallange2/CodeChallange2/Base.lproj/Main.storyboard
+++ b/CodeChallange2/CodeChallange2/Base.lproj/Main.storyboard
@@ -23,19 +23,25 @@
                                         <rect key="frame" x="0.0" y="0.0" width="174" height="36"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="Redraw"/>
+                                        <connections>
+                                            <action selector="redrawButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fo5-g8-6or"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zkG-UR-eJp">
                                         <rect key="frame" x="200" y="0.0" width="174" height="36"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="Evaluate"/>
+                                        <connections>
+                                            <action selector="evaluateButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EyS-ST-Ue5"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="uYS-EL-Ba5">
-                                <rect key="frame" x="20" y="64" width="374" height="722"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="uYS-EL-Ba5">
+                                <rect key="frame" x="0.0" y="44" width="414" height="362"/>
                                 <color key="backgroundColor" red="0.0" green="0.18552059600000001" blue="0.0080402572390000007" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cPL-We-xLK">
-                                    <size key="itemSize" width="120" height="160"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="0.0" id="5sa-qs-q2I">
+                                    <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -72,11 +78,11 @@
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="TGz-XR-WWf" secondAttribute="trailing" constant="20" id="QDI-ed-kG3"/>
                             <constraint firstItem="TGz-XR-WWf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="UXE-na-y9i"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uYS-EL-Ba5" secondAttribute="trailing" constant="20" id="Zzp-Vi-qUm"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uYS-EL-Ba5" secondAttribute="trailing" id="Zzp-Vi-qUm"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="TGz-XR-WWf" secondAttribute="bottom" constant="20" id="j2Q-9j-js1"/>
-                            <constraint firstItem="uYS-EL-Ba5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="oyj-hg-Xfg"/>
-                            <constraint firstItem="uYS-EL-Ba5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="rFQ-3d-JLz"/>
-                            <constraint firstItem="TGz-XR-WWf" firstAttribute="top" secondItem="uYS-EL-Ba5" secondAttribute="bottom" constant="20" id="w0T-9A-NLd"/>
+                            <constraint firstItem="uYS-EL-Ba5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="oyj-hg-Xfg"/>
+                            <constraint firstItem="uYS-EL-Ba5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="rFQ-3d-JLz"/>
+                            <constraint firstItem="TGz-XR-WWf" firstAttribute="top" secondItem="uYS-EL-Ba5" secondAttribute="bottom" constant="400" id="w0T-9A-NLd"/>
                         </constraints>
                     </view>
                     <connections>
